--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -154,7 +154,13 @@
                 <artifactId>log4j-core</artifactId>
                 <version>2.5</version>
             </dependency>
-    
+
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>0.9.10</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -166,7 +172,7 @@
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>1.7.13</version>
             </dependency>
-    
+
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
