--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -40,8 +40,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>4.2.3.RELEASE</spring.version>
-        <spring.boot.version>1.3.0.RELEASE</spring.boot.version>
+        <spring.version>4.2.4.RELEASE</spring.version>
+        <spring.boot.version>1.3.1.RELEASE</spring.boot.version>
     </properties>
     <licenses>
         <license>
@@ -65,6 +65,11 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring.boot.version}</version>
             </dependency>
             <dependency>
