Changed the requireJavaVersion from 1.8.0-66 to [1.8.0,).

--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>1.8.0-66</version>
+                                    <version>[1.8.0,)</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
