Added the H2 database dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,18 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <scope>provided</scope>
+        </dependency -->
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
