--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -206,6 +206,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.jamonapi</groupId>
+                <artifactId>jamon</artifactId>
+                <version>2.81</version>
+            </dependency>
+
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
