--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -145,6 +145,11 @@
                 <version>2.4.1</version>
             </dependency>
             <dependency>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-core</artifactId>
+                <version>8.1.0.Final</version>
+            </dependency>
+            <dependency>
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
                 <version>2.0.1</version>
@@ -205,6 +210,11 @@
                 <version>1.4.190</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>1.8.8</version>
+            </dependency>
             <dependency>
                 <groupId>com.jamonapi</groupId>
                 <artifactId>jamon</artifactId>
