--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
                 <version>2.10.3</version>
                 <configuration>
                     <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
-                    <docletPath>C:/development/software/UMLGraph-5.6.6/lib/UmlGraph.jar</docletPath>
+                    <docletPath>C:/development/software/UMLGraph-5.6/lib/UmlGraph.jar</docletPath>
                     <!-- 
                      If you see this error "Cannot run program 'dot'" then
                      Graphviz has probably not been installed; see here:
@@ -238,9 +238,10 @@
                     <docletArtifact>
                         <groupId>org.umlgraph</groupId>
                         <artifactId>doclet</artifactId>
-                        <version>5.6.6</version>
+                        <version>5.6</version>
                     </docletArtifact>
-                    <additionalparam>-views</additionalparam>
+                    <!-- Java 8: Absent the additonalParam below mvn will complain about Javadoc errors. -->
+                    <additionalparam>"-views" "-Xdoclint:none"</additionalparam>
                     <useStandardDocletOptions>true</useStandardDocletOptions>
                 </configuration>
                 <!-- Below is the yDoc configuration. <doclet>ydoc.doclets.YStandard</doclet> 
