--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.coherentlogic.coherent.data-model</groupId>
     <artifactId>bom</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.18-RELEASE</version>
+    <version>1.0.19-RELEASE</version>
 
     <name>Coherent Data Model Bill of Materials</name>
     <description>The bill of materials (bom) for the CL Data Model.</description>
@@ -77,6 +77,11 @@
                 <artifactId>data-model-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!-- dependency>
+                <groupId>com.coherentlogic.coherent.data-model</groupId>
+                <artifactId>logging</artifactId>
+                <version>${project.version}</version>
+            </dependency -->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
@@ -142,7 +147,7 @@
             <dependency>
                 <groupId>org.glassfish.jersey.core</groupId>
                 <artifactId>jersey-common</artifactId>
-                <version>2.4.1</version>
+                <version>2.22.2</version>
             </dependency>
             <dependency>
                 <groupId>org.infinispan</groupId>
@@ -169,6 +174,12 @@
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
                 <version>0.9.10</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-csv</artifactId>
+                <version>1.2</version>
             </dependency>
 
             <dependency>
@@ -220,6 +231,12 @@
                 <artifactId>jamon</artifactId>
                 <version>2.81</version>
             </dependency>
+
+            <!-- dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz</artifactId>
+                <version>2.2.2</version>
+            </dependency -->
 
             <dependency>
                 <groupId>junit</groupId>
