--- a/data-model-core/pom.xml
+++ b/data-model-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.coherentlogic.coherent</groupId>
         <artifactId>data-model</artifactId>
-        <version>1.0.19-RELEASE</version>
+        <version>1.0.20-RELEASE</version>
     </parent>
 
     <groupId>com.coherentlogic.coherent.data-model</groupId>
@@ -51,10 +51,11 @@
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
-        <!-- dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-        </dependency -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
