--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -40,8 +40,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>4.2.4.RELEASE</spring.version>
+        <spring.version>4.2.5.RELEASE</spring.version>
         <spring.boot.version>1.3.3.RELEASE</spring.boot.version>
+        <aspectj.version>1.8.9</aspectj.version>
+        <hibernate.version>5.1.0.Final</hibernate.version>
     </properties>
     <licenses>
         <license>
@@ -164,6 +166,11 @@
                 <version>3.4</version>
             </dependency>
             <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.4</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
                 <version>1.9.2</version>
@@ -206,17 +213,22 @@
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib</artifactId>
-                <version>3.2.0</version>
+                <version>3.2.2</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>5.0.7.Final</version>
+                <version>${hibernate.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
-                <version>5.0.7.Final</version>
+                <version>${hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-tools</artifactId>
+                <version>4.3.2</version>
             </dependency>
 
             <dependency>
@@ -227,8 +239,13 @@
 
             <dependency>
                 <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
-                <version>1.8.8</version>
+                <version>${aspectj.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.jamonapi</groupId>
