--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -225,10 +225,13 @@
                 <artifactId>hibernate-entitymanager</artifactId>
                 <version>${hibernate.version}</version>
             </dependency>
+            <!--
+              TODO: Not sure we need this dependency.
+              -->
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-tools</artifactId>
-                <version>4.3.2</version>
+                <version>4.3.2.Final</version>
             </dependency>
 
             <dependency>
