--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -64,7 +64,7 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
+            <!--  dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring.boot.version}</version>
@@ -73,7 +73,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring.boot.version}</version>
-            </dependency>
+            </dependency -->
             <dependency>
                 <groupId>com.coherentlogic.coherent.data-model</groupId>
                 <artifactId>data-model-core</artifactId>
