--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.coherentlogic.coherent.data-model</groupId>
     <artifactId>bom</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.20-RELEASE</version>
+    <version>1.0.21-RELEASE</version>
 
     <name>Coherent Data Model Bill of Materials</name>
     <description>The bill of materials (bom) for the CL Data Model.</description>
@@ -40,8 +40,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>4.2.5.RELEASE</spring.version>
-        <spring.boot.version>1.3.3.RELEASE</spring.boot.version>
+        <spring.version>4.3.0.RELEASE</spring.version>
+        <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
         <aspectj.version>1.8.9</aspectj.version>
         <hibernate.version>5.1.0.Final</hibernate.version>
     </properties>
@@ -115,7 +115,7 @@
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
-                <version>4.5.1</version>
+                <version>4.5.2</version>
             </dependency>
             <!-- Seems to have a dependency on Spring 3.1.1 which means the project 
                 will have a mix of 3.1.2 and 3.1.1 dependencies. This is not a good idea 
@@ -123,7 +123,7 @@
             <dependency>
                 <groupId>org.springframework.ws</groupId>
                 <artifactId>spring-ws-core</artifactId>
-                <version>2.2.4.RELEASE</version>
+                <version>2.3.0.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -148,12 +148,12 @@
             <dependency>
                 <groupId>org.glassfish.jersey.core</groupId>
                 <artifactId>jersey-common</artifactId>
-                <version>2.4.1</version>
+                <version>2.23</version>
             </dependency>
             <dependency>
                 <groupId>org.infinispan</groupId>
                 <artifactId>infinispan-core</artifactId>
-                <version>8.1.0.Final</version>
+                <version>8.2.2.Final</version>
             </dependency>
             <dependency>
                 <groupId>javax.ws.rs</groupId>
@@ -168,7 +168,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.4</version>
+                <version>2.5</version>
             </dependency>
             <dependency>
                 <groupId>commons-beanutils</groupId>
@@ -178,10 +178,11 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>2.5</version>
+                <version>2.6</version>
             </dependency>
 
-            <dependency>
+            <!-- DEPRECATED AS NOT CURRENTLY BEING USED. -->
+            <!-- dependency>
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
                 <version>0.9.10</version>
@@ -191,18 +192,18 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-csv</artifactId>
                 <version>1.2</version>
-            </dependency>
+            </dependency -->
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.13</version>
+                <version>1.7.21</version>
             </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.13</version>
+                <version>1.7.21</version>
             </dependency>
 
             <dependency>
@@ -226,18 +227,18 @@
                 <version>${hibernate.version}</version>
             </dependency>
             <!--
-              TODO: Not sure we need this dependency.
+              TODO: Not sure we need this dependency. Also note there's a 5.0.0.Final version available.
               -->
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-tools</artifactId>
-                <version>4.3.2.Final</version>
+                <version>4.3.4.Final</version>
             </dependency>
 
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>1.4.190</version>
+                <version>1.4.192</version>
             </dependency>
 
             <dependency>
