--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -146,15 +146,9 @@
                 <version>1.4.9</version>
             </dependency>
             <dependency>
-                <groupId>org.glassfish.jersey.core</groupId>
-                <artifactId>jersey-common</artifactId>
-                <version>2.23</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.apache.logging.log4j</groupId>
-                        <artifactId>log4j-core</artifactId>
-                    </exclusion>
-                </exclusions>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-client</artifactId>
+                <version>3.0.17.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.infinispan</groupId>
