--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <modules>
         <module>bom</module>
         <module>data-model-core</module>
+        <module>data-adapter-core</module>
     </modules>
     <dependencyManagement>
         <dependencies>
