--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -40,10 +40,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>4.3.0.RELEASE</spring.version>
+        <spring.version>4.3.2.RELEASE</spring.version>
         <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
         <aspectj.version>1.8.9</aspectj.version>
-        <hibernate.version>5.1.0.Final</hibernate.version>
+        <hibernate.version>5.2.2.Final</hibernate.version>
     </properties>
     <licenses>
         <license>
@@ -153,12 +153,12 @@
             <dependency>
                 <groupId>org.jboss.resteasy</groupId>
                 <artifactId>resteasy-client</artifactId>
-                <version>3.0.17.Final</version>
+                <version>3.0.19.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.infinispan</groupId>
                 <artifactId>infinispan-core</artifactId>
-                <version>8.2.2.Final</version>
+                <version>8.2.4.Final</version>
             </dependency>
             <dependency>
                 <groupId>javax.ws.rs</groupId>
@@ -183,7 +183,7 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>2.6</version>
+                <version>2.6.2</version>
             </dependency>
 
             <!-- DEPRECATED AS NOT CURRENTLY BEING USED. -->
@@ -219,7 +219,7 @@
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib</artifactId>
-                <version>3.2.2</version>
+                <version>3.2.4</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -232,12 +232,12 @@
                 <version>${hibernate.version}</version>
             </dependency>
             <!--
-              TODO: Not sure we need this dependency. Also note there's a 5.0.0.Final version available.
+              TODO: Not sure we need this dependency.
               -->
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-tools</artifactId>
-                <version>4.3.4.Final</version>
+                <version>5.0.2.Final</version>
             </dependency>
 
             <dependency>
