--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -41,7 +41,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.3.2.RELEASE</spring.version>
-        <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
+        <spring.boot.version>1.4.0.RELEASE</spring.boot.version>
         <aspectj.version>1.8.9</aspectj.version>
         <hibernate.version>5.2.2.Final</hibernate.version>
     </properties>
@@ -84,6 +84,11 @@
                 <artifactId>data-adapter-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.coherentlogic.coherent.data-model</groupId>
+                <artifactId>data-adapter-application</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <!-- dependency>
                 <groupId>com.coherentlogic.coherent.data-model</groupId>
                 <artifactId>logging</artifactId>
@@ -93,6 +98,14 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${spring.version}</version>
+                <!-- Below see: http://stackoverflow.com/questions/7952154/spring-resttemplate-how-to-enable-full-debugging-logging-of-requests-responses
+                  -->
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+            </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
