--- a/data-adapter-application/pom.xml
+++ b/data-adapter-application/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.coherentlogic.coherent</groupId>
         <artifactId>data-model</artifactId>
-        <version>1.0.27-RELEASE</version>
+        <version>1.0.28-RELEASE</version>
     </parent>
 
     <groupId>com.coherentlogic.coherent.data-model</groupId>
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
 
     <name>data-adapter-application</name>
-    <url>http://sourceforge.net/projects/cldatamodel/</url>
+    <url>https://bitbucket.org/CoherentLogic/coherent-logic-enterprise-data-adapter</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -96,6 +96,12 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jamonapi</groupId>
+            <artifactId>jamon</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
