--- a/data-adapter-core/pom.xml
+++ b/data-adapter-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.coherentlogic.coherent</groupId>
         <artifactId>data-model</artifactId>
-        <version>1.0.27-RELEASE</version>
+        <version>1.0.28-RELEASE</version>
     </parent>
 
     <groupId>com.coherentlogic.coherent.data-model</groupId>
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
 
     <name>data-adapter-core</name>
-    <url>http://sourceforge.net/projects/cldatamodel/</url>
+    <url>https://bitbucket.org/CoherentLogic/coherent-logic-enterprise-data-adapter</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,10 +39,10 @@
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>javax.persistence</artifactId>
          </dependency>
-        <dependency>
+        <!-- dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-         </dependency>
+         </dependency -->
          <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
@@ -86,6 +86,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.10.5.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
