--- a/data-adapter-core/pom.xml
+++ b/data-adapter-core/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.coherentlogic.coherent</groupId>
-        <artifactId>data-model</artifactId>
-        <version>1.0.28-RELEASE</version>
+        <groupId>com.coherentlogic</groupId>
+        <artifactId>enterprise-data-adapter</artifactId>
+        <version>2.0.0-RELEASE</version>
     </parent>
 
-    <groupId>com.coherentlogic.coherent.data-model</groupId>
+    <groupId>com.coherentlogic.enterprise-data-adapter</groupId>
     <artifactId>data-adapter-core</artifactId>
     <packaging>jar</packaging>
 
@@ -21,7 +21,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.coherentlogic.coherent.data-model</groupId>
+            <groupId>com.coherentlogic.enterprise-data-adapter</groupId>
             <artifactId>data-model-core</artifactId>
         </dependency>
         <dependency>
