--- a/infinispan-int/pom.xml
+++ b/infinispan-int/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.coherentlogic.coherent</groupId>
-        <artifactId>data-model</artifactId>
-        <version>1.0.28-RELEASE</version>
+        <groupId>com.coherentlogic</groupId>
+        <artifactId>enterprise-data-adapter</artifactId>
+        <version>2.0.0-RELEASE</version>
     </parent>
 
-    <groupId>com.coherentlogic.coherent.data-model</groupId>
+    <groupId>com.coherentlogic.enterprise-data-adapter</groupId>
     <artifactId>infinispan-int</artifactId>
     <packaging>jar</packaging>
 
@@ -18,4 +18,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.coherentlogic.enterprise-data-adapter</groupId>
+            <artifactId>data-adapter-core</artifactId>
+        </dependency>
+    </dependencies>
 </project>
