--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
         <version>7</version>
     </parent>
 
-    <groupId>com.coherentlogic.coherent</groupId>
-    <artifactId>data-model</artifactId>
-    <version>1.0.28-RELEASE</version>
+    <groupId>com.coherentlogic</groupId>
+    <artifactId>enterprise-data-adapter</artifactId>
+    <version>2.0.0-RELEASE</version>
     <packaging>pom</packaging>
 
     <name>data-model</name>
@@ -48,7 +48,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.coherentlogic.coherent.data-model</groupId>
+                <groupId>com.coherentlogic.enterprise-data-adapter</groupId>
                 <artifactId>bom</artifactId>
                 <version>${project.version}</version>
                 <type>pom</type>
