Added the infinispan-int dependency.

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -91,6 +91,11 @@
             </dependency>
             <dependency>
                 <groupId>com.coherentlogic.enterprise-data-adapter</groupId>
+                <artifactId>infinispan-int</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.coherentlogic.enterprise-data-adapter</groupId>
                 <artifactId>data-adapter-application</artifactId>
                 <version>${project.version}</version>
             </dependency>
